# mnemoszune

./: Cargo.toml  mnémoszüné.yaml
src/: configuration.rs  error.rs  main.rs
