[package]
name = "mnémoszüné"
version = "0.1.0"
authors = ["Zsombor Gegesy <gzsombor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.1.20"
structopt = "0.3.5"
serde_yaml = "0.8.11"
serde = { version = "1.0.103", features = ["derive"] }
thiserror = "1.0"